--- a/views/chatroom.jade
+++ b/views/chatroom.jade
@@ -1,5 +1,6 @@
 extends layout
 block content
+	script(src='/js/client.js')
 	script.
 		roomID = '#{room._id}';
 		//user 1 is current user
@@ -18,11 +19,11 @@ block content
 					input#outgoing(type='text')
 					.chatOptions
 						.chat-btn#chat-btn-image
-							img(src='/images/icon-video-btn-image.png')
+							img(src='/images/icon-image.png')
 						.chat-btn#chat-btn-video
-							img(src='/images/icon-video-btn-video.png')
+							img(src='/images/icon-switchToVideo.png')
 						.chat-btn#chat-btn-block
-							img(src='/images/icon-video-btn-block.png')
+							img(src='/images/icon-block.png')
 						button.chat-btn#outgoingSubmit(type='submit') Submit
 				.videoWrap
 					.videoDisplay
@@ -32,7 +33,7 @@ block content
 							.chat-btn#switchToChat
 								img(src='/images/icon-video-btn-chat.png')
 							.chat-btn#callButton
-								img(src='/images/icon-video-btn-call.png')
+								img(src='/images/icon-phone.png')
 							.chat-btn#muteButton
 								img(src='/images/icon-video-btn-mute.png')
 							.chat-btn#hangupButton
