list of old convos being implemented

--- a/views/chat.jade
+++ b/views/chat.jade
@@ -5,10 +5,14 @@ block content
 		.chatChoiceWrap
 			h1 Chat
 			.chatChoices
-				a(href='/chatprof')
+				a(href='/chat/chatprof')
 					button.chatChoice#chatProfessional(type='button') Talk to a professional
-				a(href='/chatpeer')
+				a(href='/chat/chatpeer')
 					button.chatChoice#chatPeer(type='button') Talk to a stranger
-		.oldCovosWrap
-			h2 History
-			ul#oldConvos
+		if (history)
+			.oldCovosWrap
+				h2 History
+				p #{history}
+				ul#oldConvos
+					for item in history
+						li item
