--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -155,6 +155,27 @@ form {
         .container nav ul li a .navoption img {
           height: 30px;
           margin: 10px auto 0 auto; }
+  .container .history {
+    width: 100%;
+    height: auto;
+    padding-top: 40px; }
+    .container .history ul {
+      width: 100%; }
+      .container .history ul li {
+        width: 100%;
+        background-color: #ffffff;
+        padding: 5px 20px;
+        color: #213e64;
+        -webkit-box-shadow: 5px 5px 15px 1px rgba(0, 0, 0, 0.1);
+        -moz-box-shadow: 5px 5px 15px 1px rgba(0, 0, 0, 0.1);
+        -ms-box-shadow: 5px 5px 15px 1px rgba(0, 0, 0, 0.1);
+        box-shadow: 5px 5px 15px 1px rgba(0, 0, 0, 0.1); }
+        .container .history ul li .subject {
+          font-size: 1em; }
+        .container .history ul li .time {
+          font-size: 0.8em; }
+        .container .history ul li .icon {
+          float: right; }
   .container .logout {
     padding-top: 85vh;
     text-align: right; }
