--- a/views/index.jade
+++ b/views/index.jade
@@ -29,14 +29,22 @@ block content
 			if (user.username)
 				h1 Hi #{user.username}
 				.circle
-				.history
-					ul.recentHistory
-						li.historyItem
-							.subject
-								p #{history}
-							.time
-							.icon
-								img(src='images/icon-phone.png')
+				if (history)
+					.history
+						h2 History
+						ul.historyconvo
+							for item in history
+								li
+									a(href="")
+										ul.historyitem
+											for i in item
+												li
+													.subject
+														p=i.user
+													.message
+														p=i.message
+													.time
+														p=i.timesent
 				.base
 					.logout
 						a(href="/logout") Logout
