--- a/views/index.jade
+++ b/views/index.jade
@@ -33,18 +33,17 @@ block content
 					.history
 						h2 History
 						ul.historyconvo
-							for item in history
-								li
-									a(href="")
+							for item,i in history
+								- var z = (100) - [i];
+								li(style="z-index: #{z};")
+									a(href="/chat/chatpeer?user=#{history[i][0]}")
 										ul.historyitem
-											for i in item
-												li
-													.subject
-														p=i.user
-													.message
-														p=i.message
-													.time
-														p=i.timesent
+											.user
+												p=history[i][0]
+											.message
+												p=history[i][1]
+											.time
+												p=history[i][2]
 				.base
 					.logout
 						a(href="/logout") Logout
