--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -58,6 +58,12 @@ ul {
 li {
   list-style-type: none; }
 
+p {
+  -webkit-margin-before: 0px;
+  -webkit-margin-after: 0px;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px; }
+
 form {
   padding: 20px;
   margin: 0 auto;
@@ -178,26 +184,30 @@ form {
       border-radius: 5px; }
   .container .history ul {
     width: 100%;
-    padding: 40px 0;
-    text-align: center; }
+    padding: 40px 0; }
     .container .history ul li {
-      width: 100%; }
+      width: 100%;
+      position: relative; }
       .container .history ul li a ul.historyitem {
         width: 90%;
-        padding: 6.66667px;
+        padding: 0 40px;
         background-color: white;
-        margin: 20px auto;
-        -webkit-box-shadow: 5px 5px 15px 1px rgba(0, 0, 0, 0.1);
-        -moz-box-shadow: 5px 5px 15px 1px rgba(0, 0, 0, 0.1);
-        -ms-box-shadow: 5px 5px 15px 1px rgba(0, 0, 0, 0.1);
-        box-shadow: 5px 5px 15px 1px rgba(0, 0, 0, 0.1); }
-        .container .history ul li a ul.historyitem li p {
-          color: #213e64; }
-        .container .history ul li a ul.historyitem li .subject {
-          font-size: 1em; }
-        .container .history ul li a ul.historyitem li .time {
-          font-size: 0.8em; }
-        .container .history ul li a ul.historyitem li .icon {
+        margin: 0 auto;
+        -webkit-box-shadow: 0px 7px 14px 0px rgba(0, 0, 0, 0.2);
+        -moz-box-shadow: 0px 7px 14px 0px rgba(0, 0, 0, 0.2);
+        -ms-box-shadow: 0px 7px 14px 0px rgba(0, 0, 0, 0.2);
+        box-shadow: 0px 7px 14px 0px rgba(0, 0, 0, 0.2);
+        color: #213e64;
+        text-align: left; }
+        .container .history ul li a ul.historyitem .user {
+          font-size: 1.2em;
+          padding: 20px 0 10px 0; }
+        .container .history ul li a ul.historyitem .message {
+          padding: 10px 0; }
+        .container .history ul li a ul.historyitem .time {
+          font-size: 0.6em;
+          padding: 10px 0; }
+        .container .history ul li a ul.historyitem .icon {
           float: right; }
   .container .chatRoom {
     padding-top: 20px; }
