--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -88,14 +88,9 @@ form { padding: $pad; margin: 0 auto; font-size: 1em; text-align: left;
 
 
 
-
-
-
-
     // dash
     .logout { padding-top: 85vh; text-align: right; }
     .chatWraps { width: 100%; padding: $pad*2 $pad 0; text-align: center; }
-
 
 
 
@@ -107,24 +102,20 @@ form { padding: $pad; margin: 0 auto; font-size: 1em; text-align: left;
             .chatChoice { @extend button; width: 80%; max-width: 400px; height: 40px; margin: $pad/2 auto; @include border-radius(5px);}
         }
     }
-    .history {@extend .chatWraps;
+    .history, .forumWrap {@extend .chatWraps;
         ul { width: 100%; padding: $pad*2 0;
             li { width: 100%; position: relative;
                 a {
-                    ul.historyitem { width: 90%; padding: 0 $pad*2; background-color: white; margin: 0 auto; @include box-shadow( 0px 7px 14px 0px rgba(0,0,0,0.2)); color: $blue; text-align: left; 
+                    ul { width: 90%; padding: 0 $pad*2; background-color: white; margin: 0 auto; @include box-shadow( 0px 7px 14px 0px rgba(0,0,0,0.2)); color: $blue; text-align: left; 
                         .user {font-size: 1.2em; padding: $pad 0 $pad/2 0;}
                         .message {padding: $pad/2 0;}
                         .time {font-size: 0.6em; padding: $pad/2 0;}
                         .icon { float: right; }
                     }
                 }
-                
             }
         }
     }
-
-
-
 
 
 
@@ -167,6 +158,20 @@ form { padding: $pad; margin: 0 auto; font-size: 1em; text-align: left;
                         &:hover {background-color:$blue;}
                         img {height: 38px; width: auto; margin: 0 auto;}
                     }
+                }
+            }
+        }
+    }
+
+
+
+
+    // forum
+    .forumWrap { @extend .chatWraps;
+        .addPost { float: right; padding: $pad;
+            a {
+                .add {  width: 50px; height: auto;
+                    img {width: 100%;}
                 }
             }
         }
