--- a/views/forum.jade
+++ b/views/forum.jade
@@ -8,9 +8,17 @@ block content
 				a(href="/forum/new")
 					.add
 						img(src="/images/newpost.png")
-			ul.forumList
-				for item in thread
-					- var z = (100) - [i];
-						li(style="z-index: #{z};")
-							a(href="/forum/post?id=#{post[i][0]}")
-								ul.threaditem
+			if (threads)
+				.threadList
+					ul.threads
+						for item,i in threads
+							- var z = (100) - [i];
+								li(style="z-index: #{z};")
+									a(href="")
+										ul.threadItem
+											.title
+												p=item[0]
+											.postuser
+												p=item[3]
+											.time
+												p=item[2]
