replies can be made and viewed with the post

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -370,5 +370,7 @@ form {
       -moz-border-radius: 20px;
       -ms-border-radius: 20px;
       border-radius: 20px; }
+  .container .postReply {
+    display: none; }
 
 /*# sourceMappingURL=styles.css.map */
