--- a/views/new.jade
+++ b/views/new.jade
@@ -5,7 +5,7 @@ block content
 		.forumWrap
 			h1 New Post
 			.newPost
-				form.form-login(role='form', action="/forum", method="POST")
+				form.form-post(role='form', action="/forum", method="POST")
 					input.form-input(type="text", name="title", placeholder="Title")
 					input.form-input(type="text", name="content", placeholder="What did you want to say?")
 					button.form-submit(type="submit") Submit
