--- a/views/forum.jade
+++ b/views/forum.jade
@@ -18,6 +18,8 @@ block content
 										ul.threadItem
 											.title
 												p=item[1]
+											.postnumber
+												p=item[5]
 											.postuser
 												p=item[4]
 											.time
