--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -109,9 +109,9 @@ form { padding: $pad; margin: 0 auto; font-size: 1em; text-align: left;
                     ul { width: 90%; padding: 0 $pad*2; background-color: white; margin: 0 auto; @include box-shadow( 0px 7px 14px 0px rgba(0,0,0,0.2)); color: $blue; text-align: left; 
                         .user, .title {font-size: 1.2em; padding: $pad 0 $pad/2 0;}
                         .message, .postuser {padding: $pad/2 0;}
-                        .time {font-size: 0.6em; padding: $pad/2 0; width: 50%; display: inline-block;}
+                        .time {font-size: 0.6em; padding: $pad/2 0; width: 70%; display: inline-block;}
                         .icon { float: right; }
-                        .edit { font-size: 0.8em; text-align: right; padding: $pad/2 $pad/4; width: 50%; display: inline-block;}
+                        .edit, .delete { font-size: 0.8em; text-align: right; padding: $pad/2 $pad/4; display: inline-block;}
                     }
                 //}
             }
